Symfony j1: controller, entity, form, templates, ...

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,8 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+        <footer>
+        <p>Site créé lors du cours de Symfony</p>
+        </footer>
     </body>
 </html>
