--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{# Run `composer require symfony/webpack-encore-bundle`
+		           and uncomment the following Encore helpers to start using Symfony UX #}
+		{% block stylesheets %}
+			{#{{ encore_entry_link_tags('app') }}#}
+		{% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        <footer>
-        <p>Site créé lors du cours de Symfony</p>
-        </footer>
-    </body>
+		{% block javascripts %}
+			<link rel="stylesheet" href={{asset("css/style.css")}}>
+			{#{{ encore_entry_script_tags('app') }}#}
+		{% endblock %}
+	</head>
+	<body>
+		<header>
+			<nav>
+                <a href={{path('index')}}>Accueil</a>
+                <a href={{path('articles')}}>Articles</a>
+                <a href={{path('saveArticle')}}>Ajouter</a>
+            </nav>
+		</header>
+		{% block body %}{% endblock %}
+		<footer>
+			<p>Site créé lors du cours de Symfony</p>
+		</footer>
+	</body>
 </html>
